         compat/Makefile.am,compat/amiga/Makefile.am,ui/svga/Makefile.am,
         ui/sdl/{sdlui.c,sdljoystick.c,sdlkeyboard.c,Makefile.am,sdldisplay.c},
         ui/win32/{win32ui.c,statusbar.c,win32keyboard.c,debugger.c,
         pokefinder.c,Makefile.am,win32display.c,error.c,menu_data.c},ui/ui.h,
         ui/gtk/{gtkmouse.c,browse.c,gtkjoystick.c,gtkkeyboard.c,statusbar.c,
         memory.c,gtkdisplay.c,picture.c,roms.c,gtkui.c,options.pl,debugger.c,
         binary.c,pokefinder.c,Makefile.am,rollback.c,confirm.c},
         ui/ggi/Makefile.am,ui/fb/Makefile.am,ui/scaler/{Makefile.am,scaler.c,
         scalers.c},ui/Makefile.am,ui/xlib/{xerror.c,xui.c,Makefile.am,
         xkeyboard.c,xdisplay.c},ui/uijoystick.c: use AM_CPPFLAGS rather than
         change every header inclusion to be relaive to the current directory
         (Fred).
20070819 disk/wd1770.c: fix restore and seek commands and implement 'read
	 address' command (Stuart).
20070819 disk/wd1770.c: don't use a hardcoded sector number for the read
	 address command -- use the sector base for the current disk image,
	 instead (Stuart).
20070819 disk/plusd.c,disk/wd1770.[ch]: cleanup disk drive emulation (Stuart).
20070819 disk/wd1770.c: fix a logic error in the read address emulation, and
	 treat the command byte 'ff' as a force interrupt command (needed for
	 Betadisk emulation) (Stuart).
20070819 disk/plusd.c,trdos.c: avoid accumulation of index pulse events
	 (fixes bug #1764981) (Stuart).
20070821 machine.c,memory.h: note when we have loaded a custom ROM (Fred).
20070821 trdos.c: correct snapshot register writing (Fred).
20070821 if2.c: fix bracket indentation (Fred).
20070821 disk/plusd.c: correct default ROM loading (Fred).
20070821 disk/plusd.c: clean up +D RAM code (Stuart).
20070823 ui/sdl/sdldisplay.c: update screen when only the statusbar has changed
         (thanks, Gergely) (Fred).
20070828 TODO: remove unused file; handled by SF trackers.