@@ -72,18 +72,6 @@ typedef struct path_context {
 static void init_path_context( path_context *ctx, utils_aux_type type );
 static int get_next_path( path_context *ctx );
 
-int
-utils_is_absolute_path( const char *filename )
-{
-  if( filename[0] == FUSE_DIR_SEP_CHR )
-    return 1;
-#ifdef WIN32
-  if( filename[0] && filename[1] == ':' )
-    return 1;
-#endif
-  return 0;
-}
-
 /* Open `filename' and do something sensible with it; autoload tapes
    if `autoload' is true and return the type of file found in `type' */
 int
@@ -228,7 +216,7 @@ utils_find_auxiliary_file( const char *filename, utils_aux_type type )
   path_context ctx;
 
   /* If given an absolute path, just look there */
-  if( utils_is_absolute_path( filename ) )
+  if( compat_is_absolute_path( filename ) )
     return open( filename, O_RDONLY | O_BINARY );
 
   /* Otherwise look in some likely locations */
@@ -258,7 +246,7 @@ utils_find_file_path( const char *filename, char *ret_path,
   struct stat stat_info;
 
   /* If given an absolute path, just look there */
-  if( utils_is_absolute_path( filename ) ) {
+  if( compat_is_absolute_path( filename ) ) {
     strncpy( ret_path, filename, PATH_MAX );
     return 0;
   }
@@ -326,7 +314,7 @@ get_next_path( path_context *ctx )
       return 0;
     }
 
-    if( utils_is_absolute_path( fuse_progname ) ) {
+    if( compat_is_absolute_path( fuse_progname ) ) {
       strncpy( buffer, fuse_progname, PATH_MAX );
       buffer[ PATH_MAX - 1 ] = '\0';
     } else {
